<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_weight="0.4"
    tools:context=".activities.updateAssessment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/classTitle"
                    android:layout_width="72dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.4"
                    android:text="@string/assessment_title"
                    android:textSize="20sp"
                    tools:ignore="TextSizeCheck" />

                <EditText
                    android:id="@+id/etAssessmentTitleUpdate2"
                    android:layout_width="257dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.6"
                    android:autofillHints=""
                    android:gravity="center"
                    android:hint="@string/InputAssessmentName"
                    android:inputType="text" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="0.4"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/startDate"
                    android:layout_width="105dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-12dp"
                    android:layout_weight="0.4"
                    android:text="@string/start_date_class"
                    android:textSize="20sp"
                    tools:ignore="NestedWeights" />

                <EditText
                    android:id="@+id/etStartDateAssessment2"
                    android:layout_width="280dp"
                    android:layout_height="80dp"
                    android:layout_weight="0.6"
                    android:autofillHints=""
                    android:gravity="center"
                    android:hint="@string/inputStartDate"
                    android:inputType="date" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/endDate"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="-12dp"
                    android:layout_weight="0.4"
                    android:text="@string/end_date_class"
                    android:textSize="20sp" />

                <EditText
                    android:id="@+id/etEndDateAssessment2"
                    android:layout_width="279dp"
                    android:layout_height="match_parent"
                    android:layout_marginStart="15dp"
                    android:layout_weight="0.6"
                    android:autofillHints=""
                    android:gravity="center"
                    android:hint="@string/inputEndDate"
                    android:inputType="date" />
            </LinearLayout>

        </LinearLayout>

        <CheckedTextView
            android:id="@+id/TypeAssessment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="19dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="15dp"
            android:gravity="left"
            android:text="@string/statues"
            android:textSize="16sp" />


        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/rbPerformanceAssessment2"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:minHeight="48dp"
                android:text="@string/Performance"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/rbObjectiveAssessment2"
                android:layout_width="wrap_content"
                android:layout_height="43dp"
                android:layout_marginStart="20dp"
                android:text="@string/Objective"
                android:textSize="16sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:orientation="vertical">

            <Button
                android:id="@+id/btUpdateAssessment2"
                android:layout_width="182dp"
                android:layout_height="52dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/custom_button"
                android:text="@string/updateAssessment"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

</ScrollView>