<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#00000000"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".activities.MainActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="147dp"
        app:srcCompat="@drawable/student_term"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/txWelcome"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginVertical="0dp"
        android:fontFamily="serif"
        android:text="@string/welcome"
        android:textColor="@color/black"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btWelcome"
        android:layout_width="182dp"
        android:layout_height="52dp"
        android:layout_gravity="center"
        android:layout_marginVertical="50dp"
        android:text="@string/btWelcome"
        android:background="@drawable/custom_button"
        android:textSize="20sp"/>




</LinearLayout>